fixed x-axis overflow on contact-us.html

--- a/assets/css/contact-us.css
+++ b/assets/css/contact-us.css
@@ -10,11 +10,22 @@
   box-sizing: border-box;
 }
 
+html, body {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background-color: var(--primary);
+}
+
 body {
+  overflow-y: auto;
+}
+
+/* body {
     width: 100vw;
     height: 100vh;
     background-color: var(--primary);
-  }
+  } */
 
 /* MESSAGE BOX */
 
